fixing invisible contrast errors

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,6 +13,7 @@ GLOBAL HTML
     box-sizing: border-box;
 }
 
+
 h1, h2, h3, h4, h5, h6 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -21,6 +22,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    color: #3a5033
 }
 
 body {
@@ -34,10 +36,11 @@ body {
     background-image: linear-gradient(45deg,#364e2f, #779f6b);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    color: #3a5033;
 }
 
 main h1, main h2, main h3, main h4, main h5, main h6 {
-    color: #F7E7CE;
+    color: #defbf1;
 }
 
 header {
@@ -114,8 +117,13 @@ footer {
     text-align: center;
 }
 
+footer .socials {
+    background-color: #333;
+}
+
 footer .socials a {
     margin: 0 10px;
+    background-color: #333;
 }
 
 footer .socials img {
@@ -453,6 +461,10 @@ TEAM SECTION
     row-gap: 70px;
     width: 100%;
     height: auto;
+    text-align: center;
+    text-align: center;
+    color: white;
+    background-color: #364e2f;
 }
 
 .team-section h2 {
@@ -473,10 +485,6 @@ TEAM SECTION
     margin: 10px 0px 0px 0px;
 }
 
-.team-section  {
-    text-align: center;
-    color: white;
-}
 
 #team-member1 {
     grid-column: 2;
@@ -491,6 +499,7 @@ TEAM SECTION
 #team-member3 {
     grid-column: 6;
     grid-row: 2;
+    
 }
 /*
 .subelement > * {
